[package]
name = "sc-consensus-qpow"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
# Core dependencies
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-qpow = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-timestamp = {workspace = true}
sp-inherents = {workspace = true}

# Utilities
log = "0.4.22"
parking_lot = "0.12.3"
time = "0.3.37"
thiserror = "2.0.8"
tokio = "1.42.0"
async-trait = "0.1.83"
num-traits = "0.2.19"


[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-qpow/std",
    "sp-core/std",
    "sp-runtime/std",
]
runtime-benchmarks = []