[package]
name = "sc-consensus-qpow"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
codec.workspace = true
scale-info.workspace = true
sc-client-api = { workspace = true }
sc-consensus-pow.workspace = true
sp-consensus-pow.workspace = true
sp-consensus-qpow.workspace = true
sp-runtime.workspace = true
sp-api.workspace = true
primitive-types.workspace = true
log = { workspace = true }

sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "primitive-types/std",
    "sha2/std",
    "sha3/std",
]
runtime-benchmarks = [
]
