[package]
name = "sp-wormhole"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
sp-core = {workspace = true, default-features = false }
poseidon-resonance = {workspace = true, default-features = false}
rand = {workspace = true, default-features = false, features = ["alloc","getrandom"]}

[dev-dependencies]
hex-literal = { version="0.4.1" ,default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "poseidon-resonance/std",
    "rand/std",
]

